--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "tests": "cross-env environmentToRun=ORANGES npx playwright test StandardTestSpecFile.spec.ts",
         "updateNaukari": "cross-env environmentToRun=doves npx playwright test NaukariProfileUpdate.spec.ts",
         "shard": "cross-env environmentToRun=ORANGES npx playwright test --project=$(project) --shard=$(shard)",
+        "ApiTests": "cross-env environmentToRun=PetStore npx playwright test --project=API",
         "tsc": "tsc",
         "build": "npm run clean & npm run tsc",
         "pretest": "npm run build & mkdirp logs",
@@ -64,6 +65,7 @@
         "read-text-file": "^1.1.0",
         "test-results-reporter": "^1.0.15",
         "update-json-file": "^1.1.1",
-        "winston": "^3.14.2"
+        "winston": "^3.14.2",
+        "zod": "^3.25.60"
     }
 }
